--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = pass
 
+server.port = 8081
